[tool.poetry]
name = "pykki"
version = "0.1.0"
description = "A simple tui keybind cheatsheet"
authors = ["Zach V"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
rich = "^12.5.1"
typer = "^0.6.1"
configparser = "^5.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
